# pihole-blocklists

./: Cargo.toml  README.md  run.sh
.cargo/: config.toml
data/: lists.json
src/: app.rs  main.rs
src/services/: blocklist_service.rs  mod.rs
src/utils/: http_client.rs
